# foamRunCMake

./: .gitignore  CMakeLists.txt  Makefile  README.md  foamRunCMake.C
Make/: files
cmake/: FindOpenFOAM11.cmake
